package Politician.Politician;

public interface OrderIssuable {
    public String order();
}
